@@ -1,3 +1,8 @@
+2000-08-10  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* Fixed (I hope) 'hang' bug at end of menu screen.
+	* Added 'dependors' field to Game_object.
+
 2000-08-05  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* Moved flags to objs.h.  Set 'okay_to_take' for containers and
